Added apiUrls service.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="js/setup.js"></script>
 
   <!-- Service JS -->
+  <script src="service/apiUrls.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
