--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -34,6 +34,7 @@
   <script src="../../js/setup.js"></script>
 
   <!-- Service JS -->
+  <script src="../../service/apiUrls.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -55,6 +56,7 @@
   <!-- Test files -->
 
   <!-- Service Test JS -->
+  <script src="service/apiUrls.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
