Added some partials for the design scaffolding.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
   <!-- Partial JS -->
   <script src="partial/main/main.js"></script>
+  <script src="partial/header/header.js"></script>
+  <script src="partial/footer/footer.js"></script>
+  <script src="partial/photoGrid/photoGrid.js"></script>
+  <script src="partial/controlPanel/controlPanel.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
