--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -49,6 +49,10 @@
 
   <!-- Partial JS -->
   <script src="../../partial/main/main.js"></script>
+  <script src="../../partial/header/header.js"></script>
+  <script src="../../partial/footer/footer.js"></script>
+  <script src="../../partial/photoGrid/photoGrid.js"></script>
+  <script src="../../partial/controlPanel/controlPanel.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -71,6 +75,10 @@
 
   <!-- Partial Test JS -->
   <script src="controller/main.js"></script>
+  <script src="controller/header.js"></script>
+  <script src="controller/footer.js"></script>
+  <script src="controller/photoGrid.js"></script>
+  <script src="controller/controlPanel.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
