--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
 
+  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+
   <!-- JS from Bower components -->
   <script src="bower_components/less/dist/less-1.5.1.js" data-build="exclude"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
+  <script src="bower_components/lodash/dist/lodash.min.js"></script>
+  <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
   <!-- Main App JS -->
   <script src="js/setup.js"></script>
 
   <!-- Service JS -->
   <script src="service/apiUrls.js"></script>
+  <script src="service/place.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
