--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -35,6 +35,7 @@
 
   <!-- Service JS -->
   <script src="../../service/apiUrls.js"></script>
+  <script src="../../service/place.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -61,6 +62,7 @@
 
   <!-- Service Test JS -->
   <script src="service/apiUrls.js"></script>
+  <script src="service/place.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
