Refined the design scaffolding, especially the css.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
 
-  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-
   <!-- JS from Bower components -->
+  <script src="other_components/google.js"></script>
   <script src="bower_components/less/dist/less-1.5.1.js" data-build="exclude"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
