--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
   <!-- Directive JS -->
   <script src="directive/latest/latest.js"></script>
+  <script src="directive/photo/photo.js"></script>
+  <script src="directive/lightbox/lightbox.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
