--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -43,6 +43,8 @@
 
   <!-- Directive JS -->
   <script src="../../directive/latest/latest.js"></script>
+  <script src="../../directive/photo/photo.js"></script>
+  <script src="../../directive/lightbox/lightbox.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -70,6 +72,8 @@
 
   <!-- Directive Test JS -->
   <script src="directive/latest.js"></script>
+  <script src="directive/photo.js"></script>
+  <script src="directive/lightbox.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
