Inserted the Load button into the map as a custom control. Added the tilesloaded event to the map object so we can track changes made to the map by the user (zoom, pan).

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!-- Service JS -->
   <script src="service/apiUrls.js"></script>
   <script src="service/place.js"></script>
+  <script src="service/mapsHelper.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -51,6 +52,7 @@
   <script src="partial/footer/footer.js"></script>
   <script src="partial/photoGrid/photoGrid.js"></script>
   <script src="partial/controlPanel/controlPanel.js"></script>
+  <script src="partial/pictureLoader/pictureLoader.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
