--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -36,6 +36,7 @@
   <!-- Service JS -->
   <script src="../../service/apiUrls.js"></script>
   <script src="../../service/place.js"></script>
+  <script src="../../service/mapsHelper.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -56,6 +57,7 @@
   <script src="../../partial/footer/footer.js"></script>
   <script src="../../partial/photoGrid/photoGrid.js"></script>
   <script src="../../partial/controlPanel/controlPanel.js"></script>
+  <script src="../../partial/pictureLoader/pictureLoader.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -65,6 +67,7 @@
   <!-- Service Test JS -->
   <script src="service/apiUrls.js"></script>
   <script src="service/place.js"></script>
+  <script src="service/mapsHelper.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
@@ -74,6 +77,7 @@
   <script src="directive/latest.js"></script>
   <script src="directive/photo.js"></script>
   <script src="directive/lightbox.js"></script>
+  <script src="directive/pictureLoadButton.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
@@ -85,6 +89,7 @@
   <script src="controller/footer.js"></script>
   <script src="controller/photoGrid.js"></script>
   <script src="controller/controlPanel.js"></script>
+  <script src="controller/pictureLoader.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
