Added bootstrap and font-awesome, started implementing the Zolio theme. Restructured the partials a bit.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html ng-app="ingr-web">
 <head>
-  <title></title>
+  <title>Instagrannar</title>
 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
@@ -53,6 +54,7 @@
   <script src="partial/photoGrid/photoGrid.js"></script>
   <script src="partial/controlPanel/controlPanel.js"></script>
   <script src="partial/pictureLoader/pictureLoader.js"></script>
+  <script src="partial/map/map.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
