--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -58,6 +58,7 @@
   <script src="../../partial/photoGrid/photoGrid.js"></script>
   <script src="../../partial/controlPanel/controlPanel.js"></script>
   <script src="../../partial/pictureLoader/pictureLoader.js"></script>
+  <script src="../../partial/map/map.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -90,6 +91,7 @@
   <script src="controller/photoGrid.js"></script>
   <script src="controller/controlPanel.js"></script>
   <script src="controller/pictureLoader.js"></script>
+  <script src="controller/map.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
