--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -54,6 +54,7 @@
   <script src="../../partial/photoGrid/photoGrid.js"></script>
   <script src="../../partial/pictureLoader/pictureLoader.js"></script>
   <script src="../../partial/map/map.js"></script>
+  <script src="../../partial/sideBar/sideBar.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -81,6 +82,7 @@
   <script src="controller/photoGrid.js"></script>
   <script src="controller/pictureLoader.js"></script>
   <script src="controller/map.js"></script>
+  <script src="controller/sideBar.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
