--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
 
-  <!-- JS from Bower components -->
   <script src="//maps.googleapis.com/maps/api/js?sensor=false" data-build="exclude" data-remove="exclude"></script>
+
+  <!-- JS from Bower components -->
   <script src="bower_components/less/dist/less-1.5.1.js" data-build="exclude"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -32,6 +33,7 @@
   <!-- Service JS -->
   <script src="service/apiUrls.js"></script>
   <script src="service/mapsHelper.js"></script>
+  <script src="service/localizedContent.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
