Added search feature. resolves #35

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -48,6 +48,7 @@
 
   <!-- Directive JS -->
   <script src="../../directive/photo/photo.js"></script>
+  <script src="../../directive/googlePlaces/googlePlaces.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -77,6 +78,7 @@
 
   <!-- Directive Test JS -->
   <script src="directive/photo.js"></script>
+  <script src="directive/googlePlaces.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
