--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
 
-  <script src="//maps.googleapis.com/maps/api/js?sensor=false" data-build="exclude" data-remove="exclude"></script>
-
+  <!--<script src="//maps.googleapis.com/maps/api/js?sensor=false" data-build="exclude" data-remove="exclude"></script>-->
+  <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>-->
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&libraries=places&language=en-US"></script>
+  
   <!-- JS from Bower components -->
   <script src="bower_components/less/dist/less-1.5.1.js" data-build="exclude"></script>
   <script src="bower_components/angular/angular.min.js"></script>
@@ -26,6 +28,7 @@
   <script src="bower_components/moment/min/moment.min.js"></script>
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
   <!-- Main App JS -->
   <script src="js/setup.js"></script>
@@ -41,6 +44,7 @@
 
   <!-- Directive JS -->
   <script src="directive/photo/photo.js"></script>
+  <script src="directive/googlePlaces/googlePlaces.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
