--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!--<script src="//maps.googleapis.com/maps/api/js?sensor=false" data-build="exclude" data-remove="exclude"></script>-->
   <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>-->
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&libraries=places&language=en-US"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&libraries=places&language=en-US" data-build="exclude" data-remove="exclude"></script>
   
   <!-- JS from Bower components -->
   <script src="bower_components/less/dist/less-1.5.1.js" data-build="exclude"></script>
