Stability fixes for the map search feature.

--- a/directive/googlePlaces/googlePlaces.html
+++ b/directive/googlePlaces/googlePlaces.html
@@ -1,4 +1,4 @@
-<div id="google_places_search" class="span6">
+<div id="google_places_search" class="span8">
   <input id="google_places_ac" name="google_places_ac" type="text" class="input-block-level"/>
-  <button ng-click="doSearch()" class="btn btn-large btn-primary">Search</button>
+  <!--<button ng-click="doSearch()" class="btn btn-large btn-primary">Search</button>-->
 <div>
