--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <script src="partial/pictureLoader/pictureLoader.js"></script>
   <script src="partial/map/map.js"></script>
   <script src="partial/sideBar/sideBar.js"></script>
+  <script src="partial/photoView/photoView.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
