--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -61,6 +61,7 @@
   <script src="../../partial/pictureLoader/pictureLoader.js"></script>
   <script src="../../partial/map/map.js"></script>
   <script src="../../partial/sideBar/sideBar.js"></script>
+  <script src="../../partial/photoView/photoView.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -84,6 +85,7 @@
 
   <!-- Partial Test JS -->
   <script src="controller/main.js"></script>
+  <script src="controller/photoView.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
