--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script src="service/apiUrls.js"></script>
   <script src="service/mapsHelper.js"></script>
   <script src="service/localizedContent.js"></script>
+  <script src="service/zoom.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
