Introduced location and viewport service. Refactored stuff!

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <script src="service/mapsHelper.js"></script>
   <script src="service/localizedContent.js"></script>
   <script src="service/zoom.js"></script>
+  <script src="service/location.js"></script>
+  <script src="service/viewport.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
