--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -42,6 +42,8 @@
   <script src="../../service/mapsHelper.js"></script>
   <script src="../../service/localizedContent.js"></script>
   <script src="../../service/zoom.js"></script>
+  <script src="../../service/location.js"></script>
+  <script src="../../service/viewport.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -73,6 +75,8 @@
   <script src="service/mapsHelper.js"></script>
   <script src="service/localizedContent.js"></script>
   <script src="service/zoom.js"></script>
+  <script src="service/location.js"></script>
+  <script src="service/viewport.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
