Added ad service and modified photoGrid to insert an ad on a random position.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script src="service/zoom.js"></script>
   <script src="service/location.js"></script>
   <script src="service/viewport.js"></script>
+  <script src="service/ad.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
