--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -44,6 +44,7 @@
   <script src="../../service/zoom.js"></script>
   <script src="../../service/location.js"></script>
   <script src="../../service/viewport.js"></script>
+  <script src="../../service/ad.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -77,6 +78,7 @@
   <script src="service/zoom.js"></script>
   <script src="service/location.js"></script>
   <script src="service/viewport.js"></script>
+  <script src="service/ad.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
