Trying that again...

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="js/setup.js"></script>
 
   <!-- Service JS -->
+  <script src="service/ad.js"></script>
   <script src="service/apiUrls.js"></script>
   <script src="service/mapsHelper.js"></script>
   <script src="service/localizedContent.js"></script>
