Added annonsering partial.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -65,6 +65,7 @@
   <script src="../../partial/pictureLoader/pictureLoader.js"></script>
   <script src="../../partial/map/map.js"></script>
   <script src="../../partial/sideBar/sideBar.js"></script>
+  <script src="../../partial/annonsering/annonsering.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -92,6 +93,7 @@
 
   <!-- Partial Test JS -->
   <script src="controller/main.js"></script>
+  <script src="controller/annonsering.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
