--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <script src="partial/map/map.js"></script>
   <script src="partial/sideBar/sideBar.js"></script>
   <script src="partial/photoView/photoView.js"></script>
+  <script src="partial/annonsering/annonsering.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
