Added legal page.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <script src="partial/sideBar/sideBar.js"></script>
   <script src="partial/photoView/photoView.js"></script>
   <script src="partial/annonsering/annonsering.js"></script>
+  <script src="partial/legal/legal.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
