--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -66,6 +66,7 @@
   <script src="../../partial/map/map.js"></script>
   <script src="../../partial/sideBar/sideBar.js"></script>
   <script src="../../partial/annonsering/annonsering.js"></script>
+  <script src="../../partial/legal/legal.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -94,6 +95,7 @@
   <!-- Partial Test JS -->
   <script src="controller/main.js"></script>
   <script src="controller/annonsering.js"></script>
+  <script src="controller/legal.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
