Added header partial without the map part, put it to use in annonsering and legal page.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <script src="partial/photoView/photoView.js"></script>
   <script src="partial/annonsering/annonsering.js"></script>
   <script src="partial/legal/legal.js"></script>
+  <script src="partial/header/header.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
