--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -67,6 +67,7 @@
   <script src="../../partial/sideBar/sideBar.js"></script>
   <script src="../../partial/annonsering/annonsering.js"></script>
   <script src="../../partial/legal/legal.js"></script>
+  <script src="../../partial/header/header.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -96,6 +97,7 @@
   <script src="controller/main.js"></script>
   <script src="controller/annonsering.js"></script>
   <script src="controller/legal.js"></script>
+  <script src="controller/header.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
