--- a/directive/photo/photo.html
+++ b/directive/photo/photo.html
@@ -22,7 +22,7 @@
     </h3>
     <div>
       <a target="_blank" href="{{instagram.link}}">
-        <img data-ng-src="{{instagram.images.standard_resolution.url}}" alt="{{instagram.caption.text}}"/>
+        <img class="preview-image" data-ng-src="{{instagram.images.standard_resolution.url}}" alt="{{instagram.caption.text}}"/>
       </a>
     </div>
     <p>
