Redid the partial structure and introduced states so that the browser's back and forward buttons can be used to navigate to and from the photo grid

--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
   <!-- Add New Partial JS Above -->
 
   <div ui-view>
-    <div ng-controller="MapCtrl" ng-include src="'partial/map/map.html'"></div>
-    <div ng-controller="MainCtrl" ng-include src="'partial/main/main.html'"></div>
-    <div ng-controller="FooterCtrl" ng-include src="'partial/footer/footer.html'"></div>
+    meow...
+    <!--<div ng-controller="PhotoGridCtrl" ng-include src="'partial/photoGrid/photoGrid.html'"></div>-->
   </div>
   
 </body>
