Removed references to deleted stuff.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script src="service/location.js"></script>
   <script src="service/viewport.js"></script>
   <script src="service/ad.js"></script>
+  <script src="service/instagram.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -65,10 +66,7 @@
   <script src="partial/header/header.js"></script>
   <!-- Add New Partial JS Above -->
 
-  <div ui-view>
-    meow...
-    <!--<div ng-controller="PhotoGridCtrl" ng-include src="'partial/photoGrid/photoGrid.html'"></div>-->
-  </div>
+  <div ui-view></div>
   
 </body>
 </html>
