--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -45,6 +45,7 @@
   <script src="../../service/location.js"></script>
   <script src="../../service/viewport.js"></script>
   <script src="../../service/ad.js"></script>
+  <script src="../../service/instagram.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -81,6 +82,7 @@
   <script src="service/location.js"></script>
   <script src="service/viewport.js"></script>
   <script src="service/ad.js"></script>
+  <script src="service/instagram.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
