Lots of refactoring around the way fetched images are handled.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <script src="service/viewport.js"></script>
   <script src="service/ad.js"></script>
   <script src="service/instagram.js"></script>
+  <script src="service/images.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
