--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -46,6 +46,7 @@
   <script src="../../service/viewport.js"></script>
   <script src="../../service/ad.js"></script>
   <script src="../../service/instagram.js"></script>
+  <script src="../../service/images.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -83,6 +84,7 @@
   <script src="service/viewport.js"></script>
   <script src="service/ad.js"></script>
   <script src="service/instagram.js"></script>
+  <script src="service/images.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
