--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- JS from Bower components -->
   <script src="bower_components/less/dist/less-1.5.1.js" data-build="exclude"></script>
   <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="bower_components/momentjs/min/moment-with-locales.min.js"></script>
