--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -17,6 +17,7 @@
   <!-- JS from Bower components -->
   <script src="../../bower_components/less/dist/less-1.5.1.js"></script>
   <script src="../../bower_components/angular/angular.js"></script>
+  <script src="../../bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="../../bower_components/angular-resource/angular-resource.js"></script>
   <script src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="../../bower_components/moment/moment.js"></script>
