Added new service, locationSearch. Made the location search string remain in the search field after searching, looking at a single picture and then returning back to the grid.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -48,6 +48,7 @@
   <script src="../../service/ad.js"></script>
   <script src="../../service/instagram.js"></script>
   <script src="../../service/images.js"></script>
+  <script src="../../service/locationSearch.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -86,6 +87,7 @@
   <script src="service/ad.js"></script>
   <script src="service/instagram.js"></script>
   <script src="service/images.js"></script>
+  <script src="service/locationSearch.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
