--- a/directive/googlePlaces/googlePlaces.html
+++ b/directive/googlePlaces/googlePlaces.html
@@ -1,3 +1,3 @@
 <div id="google_places_search" class="span8">
-  <input id="google_places_ac" name="google_places_ac" type="text" class="input-block-level"/>
+  <input id="google_places_ac" name="google_places_ac" type="text" class="input-block-level" placeholder="Sök på plats" autocomplete="off" value="{{lastSearch}}"/>
 <div>
