--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <script src="service/ad.js"></script>
   <script src="service/instagram.js"></script>
   <script src="service/images.js"></script>
+  <script src="service/locationSearch.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
