Added a login modal. Minor refactoring here and there.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script src="service/instagram.js"></script>
   <script src="service/images.js"></script>
   <script src="service/locationSearch.js"></script>
+  <script src="service/auth.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -52,6 +53,7 @@
   <!-- Directive JS -->
   <script src="directive/photo/photo.js"></script>
   <script src="directive/googlePlaces/googlePlaces.js"></script>
+  <script src="directive/loginModal/loginModal.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
