--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -49,6 +49,7 @@
   <script src="../../service/instagram.js"></script>
   <script src="../../service/images.js"></script>
   <script src="../../service/locationSearch.js"></script>
+  <script src="../../service/auth.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -57,6 +58,7 @@
   <!-- Directive JS -->
   <script src="../../directive/photo/photo.js"></script>
   <script src="../../directive/googlePlaces/googlePlaces.js"></script>
+  <script src="../../directive/loginModal/loginModal.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -88,12 +90,14 @@
   <script src="service/instagram.js"></script>
   <script src="service/images.js"></script>
   <script src="service/locationSearch.js"></script>
+  <script src="service/auth.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
   <!-- Add New Model Test JS Above --> 
 
   <!-- Directive Test JS -->
+  <script src="directive/loginModal.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
