Added suggestedLocations service. Added locationSuggestion directive. Implemented a feature that sits next to the search field and allows the user to quickly navigate to a location and zoom level to view a suggested location.

--- a/directive/googlePlaces/googlePlaces.html
+++ b/directive/googlePlaces/googlePlaces.html
@@ -1,3 +1,3 @@
-<div id="google_places_search" class="span8">
+<div id="google_places_search">
   <input id="google_places_ac" name="google_places_ac" type="text" class="input-block-level" placeholder="Sök på plats" autocomplete="off" value="{{lastSearch}}"/>
 <div>
