--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -50,6 +50,7 @@
   <script src="../../service/images.js"></script>
   <script src="../../service/locationSearch.js"></script>
   <script src="../../service/auth.js"></script>
+  <script src="../../service/suggestedLocations.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -59,6 +60,7 @@
   <script src="../../directive/photo/photo.js"></script>
   <script src="../../directive/googlePlaces/googlePlaces.js"></script>
   <script src="../../directive/loginModal/loginModal.js"></script>
+  <script src="../../directive/locationSuggestion/locationSuggestion.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -91,6 +93,7 @@
   <script src="service/images.js"></script>
   <script src="service/locationSearch.js"></script>
   <script src="service/auth.js"></script>
+  <script src="service/suggestedLocations.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
@@ -98,6 +101,7 @@
 
   <!-- Directive Test JS -->
   <script src="directive/loginModal.js"></script>
+  <script src="directive/locationSuggestion.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
