--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script src="service/images.js"></script>
   <script src="service/locationSearch.js"></script>
   <script src="service/auth.js"></script>
+  <script src="service/suggestedLocations.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -54,6 +55,7 @@
   <script src="directive/photo/photo.js"></script>
   <script src="directive/googlePlaces/googlePlaces.js"></script>
   <script src="directive/loginModal/loginModal.js"></script>
+  <script src="directive/locationSuggestion/locationSuggestion.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
