Added environment service and rewrote the apiUrls service so that the system can determine its running environment by itself. Pretty neat huh?

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -51,6 +51,7 @@
   <script src="../../service/locationSearch.js"></script>
   <script src="../../service/auth.js"></script>
   <script src="../../service/suggestedLocations.js"></script>
+  <script src="../../service/environment.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
@@ -94,6 +95,7 @@
   <script src="service/locationSearch.js"></script>
   <script src="service/auth.js"></script>
   <script src="service/suggestedLocations.js"></script>
+  <script src="service/environment.js"></script>
   <!-- Add New Service Test JS Above --> 
 
   <!-- Model Test JS -->
