--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <script src="service/locationSearch.js"></script>
   <script src="service/auth.js"></script>
   <script src="service/suggestedLocations.js"></script>
+  <script src="service/environment.js"></script>
   <!-- Add New Service JS Above --> 
 
   <!-- Model JS -->
