Build verification test.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="ingr-web">
 <head>
-  <title>Instagrannar | Meow</title>
+  <title>Instagrannar</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
