--- a/oauth.html
+++ b/oauth.html
@@ -3,3 +3,4 @@
   document.cookie = 'instagrannarat=' + access_token + '; expires=Fri, 1 May 2025 13:33:37 UTC; path=/';
   window.location = '/#/search';
 </script>
+<a href="/#/search">Klicka här om du inte länkas vidare!</a>
