HTML5 video tag for video posts.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <script src="directive/googlePlaces/googlePlaces.js"></script>
   <script src="directive/loginModal/loginModal.js"></script>
   <script src="directive/locationSuggestion/locationSuggestion.js"></script>
+  <script src="directive/instagramVideo/instagramVideo.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
