--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -62,6 +62,7 @@
   <script src="../../directive/googlePlaces/googlePlaces.js"></script>
   <script src="../../directive/loginModal/loginModal.js"></script>
   <script src="../../directive/locationSuggestion/locationSuggestion.js"></script>
+  <script src="../../directive/instagramVideo/instagramVideo.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -104,6 +105,7 @@
   <!-- Directive Test JS -->
   <script src="directive/loginModal.js"></script>
   <script src="directive/locationSuggestion.js"></script>
+  <script src="directive/instagramVideo.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
